--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ permissions:
 jobs:
   precommit:
     name: pre-commit (lint/format/tests)
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     # Run on PRs, and on pushes to main
     if: ${{ github.event_name != 'push' || github.ref == 'refs/heads/main' }}
 
